recipe refactor - still not ended
& I hope I didn't break anything :((